--- a/components/arw3zu5ac-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/arw3zu5ac-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: arw3zu5ac-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-10f699dd7b.ysff.p3.openshiftapps.com/rhtap/rhtap-qe:04508365823d171437d5a91bc15feaa0b71903ec@sha256:5a292c2c14e922ae3043e4c34fba94020fede702d27219f63969b7a2de27765d
+          name: container-image
